--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
     "@supabase/supabase-js": "^2.45.4",
     "next": "14.2.11",
     "react": "^18",
