--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@supabase/supabase-js": "^2.45.4",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
