--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.56.2",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18",
-    "zustand": "^5.0.0-rc.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
