--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tanstack/react-query": "^5.56.2",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-error-boundary": "^4.0.13"
   },
   "devDependencies": {
     "@types/node": "^20",
