Fix: eslint 규칙 수정, 임포트 경로 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,10 @@
     "next",
     "next/core-web-vitals",
     "next/typescript",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:react/recommended"
   ],
-  "plugins": ["@typescript-eslint/eslint-plugin"],
   "rules": {
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "react/react-in-jsx-scope": "off"
   }
 }
