refactor: splidejs에서 swiperjs로 수정

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
     "react-loading-skeleton": "^3.5.0",
+    "swiper": "^11.2.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
